<resources>
    <string name="app_name">digiMarket</string>
    <string name="home">خانه</string>
    <string name="category">دسته بندی ها</string>
    <string name="cart">سبد خرید</string>
    <string name="profile">پروفایل</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="pass_required">رمز را وارد نمایید</string>
    <string name="user_name_required">نام کاربری را وارد نمایید</string>
    <string name="search_app">جست و جو در مارکت</string>
    <string name="special_offers">پیشنهادات ویژه</string>
    <string name="makeup_offers">منتخب آرایشی بهداشتی</string>
    <string name="brand">برند :</string>
    <string name="success_login">ورود موفقیت آمیز بود</string>
    <string name="error_login">ورود با مشکل مواجه شد</string>
    <string name="per_username">نام کاربری</string>
    <string name="per_password">کلمه عبور</string>
    <string name="enter_digimarket">ورود به دیجی مارکت</string>
    <string name="create_account_per">حساب ندارید؟ یک حساب بسازید</string>
    <string name="rules_desc">با ورود یا ثبت نام شما قوانین استفاده از سرویس های اپلیکیشن دیجی اندروید و قوانین خصوصی آن را میپذیرید</string>
    <string name="create_acc">ساخت حساب</string>
    <string name="products_features">ویژگی های محصول</string>
    <string name="add_to_cart">افزودن به سبد خرید</string>
    <string name="tooman">تومان</string>
    <string name="full_desc_per">توضیحات کامل</string>
    <string name="enter_productName_per">نام محصول را وارد نمایید</string>
    <string name="search">جست و جو</string>
    <string name="added_tocart_successfully">محصول با موفقیت به سبد اضافه شد</string>
    <string name="products_didnt_add">محصول به سبد اضافه نشد لطفا دوباره امتحان کنید</string>
    <string name="your_cart">سبد خرید شما</string>
    <string name="remove_from_cart">محصول از سبد خرید خارج شد</string>
    <string name="best_brands">محبوب ترین برندها</string>
    <string name="market_discount">تخفیف های مارکت</string>
    <string name="please_enter_text">لطفا متنی وارد نمایید</string>
</resources>