<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.productDescription.ProductDescriptionActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_4">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/dp_8"
                app:srcCompat="@drawable/forward" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_8"
                android:layout_marginBottom="@dimen/dp_8"
                app:srcCompat="@drawable/ic_baseline_favorite_border_24" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_8"
                android:layout_toEndOf="@+id/img_remove"
                app:srcCompat="@drawable/cart" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_8">

            <com.farzin.digimarket.customView.BNazaninBoldTextView
                android:id="@+id/addToCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button_bg"
                android:gravity="center"
                android:padding="@dimen/dp_10"
                android:text="@string/add_to_cart"
                android:textColor="@color/white" />

            <com.farzin.digimarket.customView.IranSansTextView
                android:id="@+id/txt_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:textColor="@color/black" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_180">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pager_gallery"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


        <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
            android:id="@+id/spring_dots_indicator"
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:dampingRatio="0.5"
            app:dotsColor="@color/red"
            app:dotsSize="16dp"
            app:dotsSpacing="6dp"
            app:dotsStrokeColor="@color/red"
            app:dotsStrokeWidth="2dp"
            app:stiffness="300" />

    </RelativeLayout>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_16">

            <com.farzin.digimarket.customView.BNazaninTextView
                android:id="@+id/product_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:focusable="true"
                android:scrollHorizontally="true"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/rating_bar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_8">

            <com.farzin.digimarket.customView.BNazaninBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/products_features"
                android:textColor="@color/black" />

            <com.farzin.digimarket.customView.BNazaninTextView
                android:id="@+id/short_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/dp_8"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dp_8">

                    <com.farzin.digimarket.customView.BNazaninBoldTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/full_desc_per"
                        android:textColor="@color/black" />

                    <com.farzin.digimarket.customView.BNazaninTextView
                        android:id="@+id/fullshort_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="@dimen/dp_8"
                        android:lineSpacingExtra="@dimen/dp_8"
                        android:textSize="@dimen/sp_16" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>